--- a/basic resume/index.html
+++ b/basic resume/index.html
@@ -51,18 +51,18 @@
 
 <!--Education-->
 <div class="sectionheader"> Education: </div>
-<div id="degrees">
+<ul id="degrees">
 <li> Bachelor of Arts, Journalism and Government and Politics, Minor in Spanish, University of Maryland  </li>
-</div>
+</ul>
 
 <!--Skills-->
 
 <div class="sectionheader"> Skills: </div>
-<div id="do">
+<ul id="do">
   <li> Photo editing and illustration with Adobe Photoshop. </li>
   <li> Photojournalism.</li>
   <li> Fluent in Portuguese, advanced Spanish and Italian. </li>
-</div>
+</ul>
 </div>
 </body>
 </html>
