--- a/Longo de Freitas Layout/images/index.html
+++ b/Longo de Freitas Layout/images/index.html
@@ -7,7 +7,7 @@
       <div id="content">
         <img src="banner.png" alt="banner" width="900" height="80" class="banner">
 
-      <h1 class="headline"> 875 pounds of fish, 54 dozen eggs and a kombucha machine: A week feeding an NFL team </h1>
+      <h1 class="headline"> Fajita Fridays, Chicken Parm and Greek yogurt: What's it like to feed an NFL team </h1>
 
       <div id="byline">By Sam Fortier and Samantha Pell
 
