--- a/midterm/index.html
+++ b/midterm/index.html
@@ -61,10 +61,12 @@
 
 <br>
       <h5 class="Subhead"> Meet the burners </h5>
-<br>
       <p class="text"> We asked three burners what brings them back year after year. (Questions and answers have been edited for length and clarity.) </p>
-
-
+<br>
+<br>
+      <blockquote class="blockquote"> "This is one of the greatest things humanity has ever done, and I do include the pyramids and things like that." </blockquote>
+<br>
+<br>
 
       <p class="text"> Jim Glaser </p>
 
@@ -78,7 +80,7 @@
       <p class="text"> Location: New York </p>
 
 
-      <p class="text"> What brings you back to Burning Man every year? </p>
+      <div id="bold"><p class="text"> What brings you back to Burning Man every year? </p></div>
 
 
       <p class="text"> "Burning Man isn't just an event. It's a community, it's a city. And when I was first getting involved back in 2001, it wasn’t just to go and party. I was very interested in costume culture. It was a passionate thing, and I was going around to a lot of arts events and costume parties taking pictures of people in costume." </p>
@@ -87,7 +89,7 @@
       <p class="text"> "In 2001, I went on my own [to Burning Man], didn't know anybody and fell into a whole new world that has changed my life." </p>
 
 
-      <p class="text"> How well do you feel like Burning Man has stuck to its original principles and culture? </p>
+      <div id="bold"><p class="text"> How well do you feel like Burning Man has stuck to its original principles and culture? </p></div>
 
 
       <p class="text"> "A lot of people will be negative and say, “It’s not as good as last year or 10 years ago.” I am not one of those people. This is a magical event. This is one of the greatest things humanity has ever done, and I do include the pyramids and things like that. Because when you go out into the middle of Burning Man when it’s fully built, and you see this kaleidoscopic magic, it is just huge! There’s lasers, there’s art cars, there’s flames shooting out of everything. And people do all of this for basically no money." </p>
@@ -95,8 +97,11 @@
 
       <p class="text"> "It is one of the most barren places in the country, and it blossoms with more creativity, life and love than anything ever in the history of mankind." </p>
 
-
-
+<br>
+<br>
+      <blockquote class="blockquote"> "We are all welcome here, and there is a safe space for us to be able to participate." </blockquote>
+<br>
+<br>
 
       <p class="text"> Kathy Baird </p>
 
@@ -110,7 +115,7 @@
       <p class="text"> Location: Washington, D.C.</p>
 
 
-      <p class="text"> What do you think it is about Burning Man’s environment that helps encourage community and acceptance? </p>
+      <div id="bold"><p class="text"> What do you think it is about Burning Man’s environment that helps encourage community and acceptance? </p></div>
 
 
       <p class="text"> "It’s magic. There’s a magic to Black Rock City. The dust is magical. The art that people bring is magical. … We’re building our own environment, and we’re sleeping outdoors, and we’re providing our own resources and taking care of ourselves." </p>
@@ -119,7 +124,7 @@
       <p class="text"> "I think on a cultural level, it’s kind of a made-up city that happens once a year out there. I don’t know really what it is about it, but it’s a quality and a magic that is really hard to explain to people who haven’t been. There’s a level of realness and authenticity that you feel just upon walking into the festival itself." </p>
 
 
-      <p class="text"> Which of the 10 principles is most meaningful and important to you? </p>
+      <div id="bold"><p class="text"> Which of the 10 principles is most meaningful and important to you? </p></div>
 
 
       <p class="text"> "Right now, I feel pretty focused on radical inclusion, by nature of what I do for a living, who I am as a person, my ethnic background and where I come from. I'm Lakota Oneida, I'm a Native American." </p>
@@ -127,8 +132,11 @@
 
       <p class="text"> "As someone who is sensitive to the feeling of being excluded, I think as most humans are, that one speaks to me on a deeply emotional level. … We are all welcome here, and there is a safe space for us to be able to participate, and it's a level playing field. I feel really strongly and passionately about that." </p>
 
-
-
+<br>
+<br>
+      <blockquote class="blockquote"> Learning one-way giving is one of the biggest lessons I've learned at Burning Man." </blockquote>
+<br>
+<br>
 
       <p class="text"> Jen Tempchin </p>
       <p class="text"> Years attended (including 2018): 6 </p>
@@ -141,7 +149,7 @@
 
 
 
-      <p class="text"> What brings you back to Burning Man every year? </p>
+      <div id="bold"><p class="text"> What brings you back to Burning Man every year? </p></div>
 
 
       <p class="text"> "I just feel that it's completely surreal. Every time, it's just like waking up on Christmas morning. I go there and just look around — grown adults created this from scratch! It's a massive community where everybody is coming together to make this amazing event." </p>
@@ -150,7 +158,7 @@
       <p class="text"> "The creativity … like an art car that's a Pacman with five different little ghost cars, and they're chasing each other through the desert. Someone thought of this! Just, wow, that’s so cool." </p>
 
 
-      <p class="text"> Which of the 10 principles of Burning Man do you identify with the most?</p>
+      <div id="bold"><p class="text"> Which of the 10 principles of Burning Man do you identify with the most?</p></div>
 
 
       <p class="text"> "I would say “gifting” and “leave no trace.” Those are the two that call out to me during the Burn and then also off-playa."</p>
