--- a/midterm/index.html
+++ b/midterm/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> Don't forget the title </title>
+    <title> "The dust is magical": why the Burning Man festival drives thousands to the desert </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
     <body>
