--- a/midterm/index.html
+++ b/midterm/index.html
@@ -37,9 +37,7 @@
 
 
 <br>
-      <h5 class="Subhead">What census data tells us about who participates</h5>
-<br>
-
+      <p class="Subhead">What census data tells us about who participates</p>
       <p class="text"> Each year, volunteers help collect and analyze survey results from the festival-goers to produce the Black Rock City Census. Data is collected in two phases: one is a survey that is passed out at random to attendees entering Black Rock City, and two is an online survey that goes out after the festival to all attendees. In 2017, more than 9,000 burners completed the online survey.</p>
 
 
@@ -60,7 +58,7 @@
       <div id="caption"> Burning Man participants walk through dust at the annual Burning Man event on the Black Rock. (Credit: Time)</div>
 
 <br>
-      <h5 class="Subhead"> Meet the burners </h5>
+      <p class="Subhead"> Meet the burners </p>
       <p class="text"> We asked three burners what brings them back year after year. (Questions and answers have been edited for length and clarity.) </p>
 <br>
 <br>
