--- a/midterm/index.html
+++ b/midterm/index.html
@@ -171,8 +171,8 @@
 
 
 <br>
-      <h5 class="Subhead"> From a beach in San Francisco to over 100 regional groups worldwide </h5>
-<br
+      <p class="Subhead"> From a beach in San Francisco to over 100 regional groups worldwide </p>
+<
 
 
 
