--- a/Resume-project/resume-project.html
+++ b/Resume-project/resume-project.html
@@ -4,6 +4,7 @@
 <head>
   <!--Google fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -16,6 +17,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 </head>
 <body>
@@ -54,6 +56,8 @@
    <form class="form-inline my-2 my-lg-0">
      <a href="https://twitter.com/claralfreitas" class="fa fa-twitter" target="_blank"></a>
      <a href="https://linkedin.com/in/clara-longo-de-freitas-a01329172" class="fa fa-linkedin" target="_blank"></a>
+     <a href="https://github.com/claralfreitas" class="fa fa-github" style="font-size:18px" target_"blank"></a>
+     <a href="mailto:claralfreitas@gmail.com" class="fas fa-envelope" style="font-size:18px"></a>
    </form>
  </div>
 </nav>
@@ -206,7 +210,7 @@
 </div>
 
 <a id="contact">
-<div id="contact"> 
+<div id="contact">
 
 
  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
