--- a/Resume-project/cv.html
+++ b/Resume-project/cv.html
@@ -1,11 +1,13 @@
 <html lang="en">
 <head>
+
   <!--Google fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
+
  <title>Clara Longo de Freitas</title>
  <meta name="description" content="Merrill College of Journalism, UMD">
  <meta name="author" content="Clara Longo de Freitas">
@@ -15,6 +17,7 @@
 
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 </head>
 <body>
@@ -40,94 +43,72 @@
        </li>
        <li class="nav-item">
          <a class="nav-link" href="cv.html">CV</a>
-     <!--
+     <!-- keep this just in case
      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
        <a class="dropdown-item" href="dbk.html">The Diamondback</a>
        <a class="dropdown-item" href="howard.html">Howard Center</a>
        <a class="dropdown-item" href="cns.html">CNS</a> -->
      </ul>
      </div>
-   </li>
      <form class="form-inline my-2 my-lg-0">
        <a href="https://twitter.com/claralfreitas" class="fa fa-twitter" target="_blank"></a>
        <a href="https://linkedin.com/in/clara-longo-de-freitas-a01329172" class="fa fa-linkedin" target="_blank"></a>
        <a href="https://github.com/claralfreitas" class="fa fa-github" style="font-size:18px" target_"blank"></a>
        <a href="mailto:claralfreitas@gmail.com" class="fa fa-envelope" style="font-size:18px"target_"blank"></a>
      </form>
-   </div>
   </nav>
 
-    <div id="contentdbk">
-      <img src="banner-photography.png" alt="banner" width="600" height="143" class="banner">
 <br>
 <br>
 <br>
-    <br>
-    <br>
-    <br>
-    <div id="illustrations">
-      <img src="photo11.jpg"width="650" height="434"><br>
-      <p> Washingtonian at Union Station </p>
-      <br>
-      <br>
-      <img src="photo8.jpg" width="650" height="488" ><br>
-      <p> Flamingos in Atacama</p>
-      <br>
-      <br>
-      <img src="photo12.jpg" width="650" height="975"><br>
-      <p> Rainy day</p>
-      <br>
-      <br>
-      <img src="photo7.jpg" width="650" height="488"><br>
-      <p> Don Quijote's windmills </p>
-      <br>
-      <br>
-      <img src="photo13.jpg" width="650" height="433"><br>
-      <p> Christmas market</p>
-      <br>
-      <br>
-      <img src="photo14.jpg" width="650" height="841"><br>
-      <p> The Amish</p>
-      <br>
-      <br>
-      <img src="photo15.jpg" width="650" height="433"><br>
-      <p> Stay gold, Ponyboy</p>
-      <br>
-      <br>
-      <img src="photo6.jpg" width="650" height="488"><br>
-      <p> Atacama desert </p>
-      <br>
-      <br>
-    <img src="photo2.jpg" width="650" height="433"><br>
-    <p> My dog, Curumim </p>
-    <br>
-    <br>
-    <img src="photo4.jpg"width="650" height="433"> <br>
-    <p> Antelope Canyon </p>
-    <br>
-    <br>
-
-
-
-    <img src="photo16.jpg" width="650" height="433"><br>
-    <p> My dad and my dog</p>
-    <br>
-    <br>
-</div>
-
-
+<div id="contentdbk">
+  <div id="cv">
+    <h2> CV</h2>
+  <h3> CLARA LONGO DE FREITAS </h3>
+  <div id="menu"><a href="claralfreitas@gmail.com">claralfreitas@gmail.com</a></div>
   </div>
+  <br>
+  <br>
+
+<div id="sectionheader"> Experience </div>
 <br>
+<div id="position">Staff writer</div>
+<div id="publication">The Diamondback</div>
+<div id="date"> Nov. 2019 - present </div>
+<div id="description"> I write at least two stories per week, primarily on the graduate student life beat. I also cover breaking news stories, report on larger stories and develop relationships with sources.</p>
+
 <br>
+<div id="position">Reporter</div>
+<div id="publication">Howard Center for Investigative Journalism</div>
+<div id="date"> Jan. 2020 - present </div>
+<div id="description"> I’m working on a long-form story, partnering with news organizations and universities across the country. I read and interpret city, county and state laws, and court data. I also interview city officials and relevant sources.</p>
 <br>
+<div id="position">News editor</div>
+<div id="publication">La Voz Unida</div>
+<div id="date"> Nov. 2019 - present </div>
+<div id="description"> I edit all news and feature content, focusing on storytelling and accuracy.</p>
+<br>
+  <div id="sectionheader"> Education </div>
+  <br>
+  <ul id="degrees">
+  <li> Bachelor of Arts, Journalism and Spanish, University of Maryland. Expected graduation date: May 2022.  </li>
+  </ul>
+<br>
+<div id="sectionheader"> Skills </div>
+<br>
+<ul>
+  <li> Photo editing and illustration with Adobe Photoshop. </li>
+  <li> Photojournalism.</li>
+  <li> HTML and CSS.</li>
+  <li> Fluent in Portuguese, advanced Spanish and Italian. </li>
+</ul>
 
-</div>
-  </div>
-</div>
-
-
-
-</div>
+<div id="sectionheader"> Awards </div>
+<br>
+<ul>
+  <li> 2019 Academy of Academic Excellence Award  </li>
+  <li> Dean's list</li>
+</ul>
 </body>
 
 <br>
