--- a/Resume-project/dbk.html
+++ b/Resume-project/dbk.html
@@ -35,18 +35,15 @@
        <li class="nav-item">
          <a class="nav-link" href="resume-project.html#about">About</a>
        </li>
-       <li class="nav-item dropdown">
          <li class="nav-item">
            <a class="nav-link" href="resume-project.html#experience">Experience</a>
          </li>
        <li class="nav-item">
          <a class="nav-link" href="resume-project.html#skills" tabindex="-1" aria-disabled="true">Skills</a>
        </li>
-     <li class="nav-item dropdown">
-     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-       Contact
-     </a>
-     <!--
+       <li class="nav-item">
+         <a class="nav-link" href="cv.html">CV</a>
+     <!-- keep this just in case
      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
        <a class="dropdown-item" href="dbk.html">The Diamondback</a>
        <a class="dropdown-item" href="howard.html">Howard Center</a>
@@ -57,6 +54,8 @@
      <form class="form-inline my-2 my-lg-0">
        <a href="https://twitter.com/claralfreitas" class="fa fa-twitter" target="_blank"></a>
        <a href="https://linkedin.com/in/clara-longo-de-freitas-a01329172" class="fa fa-linkedin" target="_blank"></a>
+       <a href="https://github.com/claralfreitas" class="fa fa-github" style="font-size:18px" target_"blank"></a>
+       <a href="mailto:claralfreitas@gmail.com" class="fa fa-envelope" style="font-size:18px"target_"blank"></a>
      </form>
    </div>
   </nav>
