--- a/Resume-project/illustration.html
+++ b/Resume-project/illustration.html
@@ -2,6 +2,7 @@
 <head>
   <!--Google fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -32,35 +33,34 @@
        <li class="nav-item">
          <a class="nav-link" href="resume-project.html#about">About</a>
        </li>
-       <li class="nav-item dropdown">
          <li class="nav-item">
            <a class="nav-link" href="resume-project.html#experience">Experience</a>
          </li>
        <li class="nav-item">
          <a class="nav-link" href="resume-project.html#skills" tabindex="-1" aria-disabled="true">Skills</a>
        </li>
-     <li class="nav-item dropdown">
-     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-       Contact
-     </a>
+       <li class="nav-item">
+         <a class="nav-link" href="cv.html">CV</a>
      <!--
      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
        <a class="dropdown-item" href="dbk.html">The Diamondback</a>
        <a class="dropdown-item" href="howard.html">Howard Center</a>
-       <a class="dropdown-item" href="cns.html">CNS</a> --> 
+       <a class="dropdown-item" href="cns.html">CNS</a> -->
      </ul>
      </div>
    </li>
      <form class="form-inline my-2 my-lg-0">
        <a href="https://twitter.com/claralfreitas" class="fa fa-twitter" target="_blank"></a>
        <a href="https://linkedin.com/in/clara-longo-de-freitas-a01329172" class="fa fa-linkedin" target="_blank"></a>
+       <a href="https://github.com/claralfreitas" class="fa fa-github" style="font-size:18px" target_"blank"></a>
+       <a href="mailto:claralfreitas@gmail.com" class="fa fa-envelope" style="font-size:18px"target_"blank"></a>
      </form>
    </div>
   </nav>
 
     </div>
     <div id="contentdbk">
-      <img src="illustration-banner.png" alt="banner" width="600" height="143" class="banner">
+      <img src="illustration-banner.png" alt="banner" width="600" height="188" class="banner">
     <p> I'm a creative person - and for me, that means that I have to constantly be using my imagination and transforming it into art of some form. Otherwise, I'll go insane.</p>
     <p> One Friday night where I was especially bored, I tried drawing one of my favorite artists in Photoshop. Here's the result:</p>
     <br>
