--- a/Resume-project/spanish.html
+++ b/Resume-project/spanish.html
@@ -1,10 +1,13 @@
 <html lang="en">
 <head>
+
   <!--Google fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
+
  <title>Clara Longo de Freitas</title>
  <meta name="description" content="Merrill College of Journalism, UMD">
  <meta name="author" content="Clara Longo de Freitas">
@@ -14,6 +17,7 @@
 
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 </head>
 <body>
@@ -31,48 +35,80 @@
        <li class="nav-item">
          <a class="nav-link" href="resume-project.html#about">About</a>
        </li>
-       <li class="nav-item dropdown">
          <li class="nav-item">
            <a class="nav-link" href="resume-project.html#experience">Experience</a>
          </li>
        <li class="nav-item">
          <a class="nav-link" href="resume-project.html#skills" tabindex="-1" aria-disabled="true">Skills</a>
        </li>
-     <li class="nav-item dropdown">
-     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-       Contact
-     </a>
+       <li class="nav-item">
+         <a class="nav-link" href="cv.html">CV</a>
+     <!-- keep this just in case
      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
        <a class="dropdown-item" href="dbk.html">The Diamondback</a>
        <a class="dropdown-item" href="howard.html">Howard Center</a>
-       <a class="dropdown-item" href="cns.html">CNS</a>
+       <a class="dropdown-item" href="cns.html">CNS</a> -->
      </ul>
      </div>
-   </li>
      <form class="form-inline my-2 my-lg-0">
        <a href="https://twitter.com/claralfreitas" class="fa fa-twitter" target="_blank"></a>
        <a href="https://linkedin.com/in/clara-longo-de-freitas-a01329172" class="fa fa-linkedin" target="_blank"></a>
+       <a href="https://github.com/claralfreitas" class="fa fa-github" style="font-size:18px" target_"blank"></a>
+       <a href="mailto:claralfreitas@gmail.com" class="fa fa-envelope" style="font-size:18px"target_"blank"></a>
      </form>
-   </div>
   </nav>
 
-  <div id="contentdbk">
-    <img src="foreign-language-banner.png" alt="banner" width="600" height="188" class="banner">
-
-<p> ¡Hola! Como tú probablemente ya sabe, me llamo Clara y soy una estudiante de periodismo y de español en la Universidad de Maryland. Si tú miraste mi sitio cuidadosamente, también sabes que me gusta dibujar y tomar fotos. Y si tú miraste mi sitio mucho, mucho cuidadosamente, también sabes quién es mía banda favorita (una pista: ve a la página de ilustración si non sabe). </p>
-
-<p>Pero en esa página, me gustaría decirle por qué decidí estudiar español.</p>
-
-<p>Empecé a estudiar español formalmente en la universidad. Antes de eso, yo, como muchos brasileños, hablaba "Portunhol". Es decir, un portugués con acento español. Y para mí, estaba buenísimo así. </p>
-<p>Pero en mi tercer año de universidad, comencé a sentirme perdida. No sabía si quería seguir estudiando relaciones internacionales, hasta ese momento mi segunda especialización.</p>
-<p>Entonces ocurrió la pandemia. En lugar de pasar un verano divertido en Brasil, mi hogar, tuve que quedarme entre cuatro paredes, como millones de personas en el mundo. Y, para pasar el tiempo, decidí inscribirme en una clase de verano en español. Era una aula de español diferente. En esa aula, leímos historias y poesías, vimos obras y películas - una clase completamente diferente de la única clase de español que había tomado en mi vida.</p>
- <p> Después de la primera semana de clases, decidí que haría una especialización en español, enfocándome en literatura, medios y cultura.</p>
-<p>Me enamoré, rápido así. </p>
 <br>
 <br>
 <br>
+<div id="contentdbk">
+  <div id="cv">
+    <h2> CV</h2>
+  <h3> CLARA LONGO DE FREITAS </h3>
+  <div id="menu"><a href="claralfreitas@gmail.com">claralfreitas@gmail.com</a></div>
+  </div>
+  <br>
+  <br>
 
+<div id="sectionheader"> Experiencia laboral </div>
+<br>
+<div id="position">Periodista y Reportera</div>
+<div id="publication">The Diamondback</div>
+<div id="date"> Noviembre 2019 - present </div>
+<div id="description"> Escribo al menos dos historias a la semana, principalmente sobre la vida de los estudiantes de posgrado.</p>
 
+<br>
+<div id="position">Reportera</div>
+<div id="publication">Howard Center for Investigative Journalism</div>
+<div id="date"> Enero 2020 - presente </div>
+<div id="description"> En mi primer semestre con el centro, trabajé en un proyecto de investigación a nivel nacional. Leí e interpreté códigos de leyes, entrevisté a personas del gobierno local y estatal y otras fuentes relevantes para la historia. Actualmente estoy en un segundo proyecto con el centro.</p>
+<br>
+<div id="position">Editora de noticias</div>
+<div id="publication">La Voz Unida</div>
+<div id="date"> Noviembre 2019 - presente </div>
+<div id="description"> Edito todo el contenido de las noticias del periódico.</p>
+<br>
+  <div id="sectionheader"> Formación académica </div>
+  <br>
+  <ul id="degrees">
+  <li> Bachillerato en Periodismo y Español, University of Maryland. Actualmente cursando el tercer año de la carrera.  </li>
+  </ul>
+<br>
+<div id="sectionheader"> Habilidades </div>
+<br>
+<ul>
+  <li> Adobe Photoshop, Adobe inDesign y Adobe Lightroom. </li>
+  <li> Fotoperiodismo.</li>
+  <li> HTML y CSS.</li>
+  <li> Hablo portugués con fluidez y tengo un nivel avanzado de español e italiano. </li>
+</ul>
+
+<div id="sectionheader"> Premios </div>
+<br>
+<ul>
+  <li> 2019 Academy of Academic Excellence Award  </li>
+  <li> Dean's list</li>
+</ul>
 </body>
 
 <br>
