--- a/Resume-project/italian.html
+++ b/Resume-project/italian.html
@@ -1,11 +1,13 @@
 <html lang="en">
 <head>
+
   <!--Google fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
+
  <title>Clara Longo de Freitas</title>
  <meta name="description" content="Merrill College of Journalism, UMD">
  <meta name="author" content="Clara Longo de Freitas">
@@ -15,6 +17,7 @@
 
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 </head>
 <body>
@@ -40,94 +43,73 @@
        </li>
        <li class="nav-item">
          <a class="nav-link" href="cv.html">CV</a>
-     <!--
+     <!-- keep this just in case
      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
        <a class="dropdown-item" href="dbk.html">The Diamondback</a>
        <a class="dropdown-item" href="howard.html">Howard Center</a>
        <a class="dropdown-item" href="cns.html">CNS</a> -->
      </ul>
      </div>
-   </li>
      <form class="form-inline my-2 my-lg-0">
        <a href="https://twitter.com/claralfreitas" class="fa fa-twitter" target="_blank"></a>
        <a href="https://linkedin.com/in/clara-longo-de-freitas-a01329172" class="fa fa-linkedin" target="_blank"></a>
        <a href="https://github.com/claralfreitas" class="fa fa-github" style="font-size:18px" target_"blank"></a>
        <a href="mailto:claralfreitas@gmail.com" class="fa fa-envelope" style="font-size:18px"target_"blank"></a>
      </form>
-   </div>
   </nav>
 
-    <div id="contentdbk">
-      <img src="banner-photography.png" alt="banner" width="600" height="143" class="banner">
 <br>
 <br>
 <br>
-    <br>
-    <br>
-    <br>
-    <div id="illustrations">
-      <img src="photo11.jpg"width="650" height="434"><br>
-      <p> Washingtonian at Union Station </p>
-      <br>
-      <br>
-      <img src="photo8.jpg" width="650" height="488" ><br>
-      <p> Flamingos in Atacama</p>
-      <br>
-      <br>
-      <img src="photo12.jpg" width="650" height="975"><br>
-      <p> Rainy day</p>
-      <br>
-      <br>
-      <img src="photo7.jpg" width="650" height="488"><br>
-      <p> Don Quijote's windmills </p>
-      <br>
-      <br>
-      <img src="photo13.jpg" width="650" height="433"><br>
-      <p> Christmas market</p>
-      <br>
-      <br>
-      <img src="photo14.jpg" width="650" height="841"><br>
-      <p> The Amish</p>
-      <br>
-      <br>
-      <img src="photo15.jpg" width="650" height="433"><br>
-      <p> Stay gold, Ponyboy</p>
-      <br>
-      <br>
-      <img src="photo6.jpg" width="650" height="488"><br>
-      <p> Atacama desert </p>
-      <br>
-      <br>
-    <img src="photo2.jpg" width="650" height="433"><br>
-    <p> My dog, Curumim </p>
-    <br>
-    <br>
-    <img src="photo4.jpg"width="650" height="433"> <br>
-    <p> Antelope Canyon </p>
-    <br>
-    <br>
+<div id="contentdbk">
+  <div id="cv">
+    <h2> CV</h2>
+  <h3> CLARA LONGO DE FREITAS </h3>
 
-
-
-    <img src="photo16.jpg" width="650" height="433"><br>
-    <p> My dad and my dog</p>
-    <br>
-    <br>
+  <div id="menu"><a href="claralfreitas@gmail.com">claralfreitas@gmail.com</a></div>
 </div>
+  <br>
+  <br>
 
-
-  </div>
+<div id="sectionheader"> Esperienze lavorative</div>
 <br>
+<div id="position">Giornalista</div>
+<div id="publication">The Diamondback</div>
+<div id="date"> Novembre 2019 - oggi </div>
+<div id="description"> Io scrivo al meno due storie tutte le settimana, principalmente sobre la vida de lo studenti de post-laurea en la University of Maryland.</p>
+
 <br>
+<div id="position">Giornalista</div>
+<div id="publication">Howard Center for Investigative Journalism</div>
+<div id="date"> Gennaio 2020 - oggi </div>
+<div id="description"> Nel mio primo semestre con il centro, ho lavorato a un progetto di ricerca nazionale. Ho letto e interpretato i codici di legge, ho intervistato persone del governo statale e locale e altre fonti pertinenti alla storia. Attualmente sto svolgendo un secondo progetto con il centro.</p>
 <br>
+<div id="position">Redattore di notizies</div>
+<div id="publication">La Voz Unida</div>
+<div id="date"> Noviembre 2019 - oggi </div>
+<div id="description"> Io dirigo la sezione di notizie nel giornale. Sono responsabile por leggere tutte le noticia y modificare quando necessario.</p>
+<br>
+  <div id="sectionheader">Formazione professionale</div>
+  <br>
+  <ul id="degrees">
+  <li> Laurea in giornalismo e spagnolo, Università del Maryland. Sono attualmente al terzo anno della mia laurea.  </li>
+  </ul>
+<br>
+<div id="sectionheader"> Abilità </div>
+<br>
+<ul>
+  <li> Adobe Photoshop, Adobe inDesign ed Adobe Lightroom. </li>
+  <li> Fotogiornalismo.</li>
+  <li> HTML e CSS.</li>
+  <li> Parlo fluentemente portoghese e ho un livello avanzato di spagnolo e italiano. </li>
+</ul>
 
-</div>
-  </div>
-</div>
-
-
-
-</div>
+<div id="sectionheader"> Premi </div>
+<br>
+<ul>
+  <li> 2019 Academy of Academic Excellence Award  </li>
+  <li> Dean's list</li>
+</ul>
 </body>
 
 <br>
