--- a/Resume-project/portuguese.html
+++ b/Resume-project/portuguese.html
@@ -1,11 +1,13 @@
 <html lang="en">
 <head>
+
   <!--Google fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
+
  <title>Clara Longo de Freitas</title>
  <meta name="description" content="Merrill College of Journalism, UMD">
  <meta name="author" content="Clara Longo de Freitas">
@@ -15,6 +17,7 @@
 
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 </head>
 <body>
@@ -40,94 +43,73 @@
        </li>
        <li class="nav-item">
          <a class="nav-link" href="cv.html">CV</a>
-     <!--
+     <!-- keep this just in case
      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
        <a class="dropdown-item" href="dbk.html">The Diamondback</a>
        <a class="dropdown-item" href="howard.html">Howard Center</a>
        <a class="dropdown-item" href="cns.html">CNS</a> -->
      </ul>
      </div>
-   </li>
      <form class="form-inline my-2 my-lg-0">
        <a href="https://twitter.com/claralfreitas" class="fa fa-twitter" target="_blank"></a>
        <a href="https://linkedin.com/in/clara-longo-de-freitas-a01329172" class="fa fa-linkedin" target="_blank"></a>
        <a href="https://github.com/claralfreitas" class="fa fa-github" style="font-size:18px" target_"blank"></a>
        <a href="mailto:claralfreitas@gmail.com" class="fa fa-envelope" style="font-size:18px"target_"blank"></a>
      </form>
-   </div>
   </nav>
 
-    <div id="contentdbk">
-      <img src="banner-photography.png" alt="banner" width="600" height="143" class="banner">
 <br>
 <br>
 <br>
-    <br>
-    <br>
-    <br>
-    <div id="illustrations">
-      <img src="photo11.jpg"width="650" height="434"><br>
-      <p> Washingtonian at Union Station </p>
-      <br>
-      <br>
-      <img src="photo8.jpg" width="650" height="488" ><br>
-      <p> Flamingos in Atacama</p>
-      <br>
-      <br>
-      <img src="photo12.jpg" width="650" height="975"><br>
-      <p> Rainy day</p>
-      <br>
-      <br>
-      <img src="photo7.jpg" width="650" height="488"><br>
-      <p> Don Quijote's windmills </p>
-      <br>
-      <br>
-      <img src="photo13.jpg" width="650" height="433"><br>
-      <p> Christmas market</p>
-      <br>
-      <br>
-      <img src="photo14.jpg" width="650" height="841"><br>
-      <p> The Amish</p>
-      <br>
-      <br>
-      <img src="photo15.jpg" width="650" height="433"><br>
-      <p> Stay gold, Ponyboy</p>
-      <br>
-      <br>
-      <img src="photo6.jpg" width="650" height="488"><br>
-      <p> Atacama desert </p>
-      <br>
-      <br>
-    <img src="photo2.jpg" width="650" height="433"><br>
-    <p> My dog, Curumim </p>
-    <br>
-    <br>
-    <img src="photo4.jpg"width="650" height="433"> <br>
-    <p> Antelope Canyon </p>
-    <br>
-    <br>
+<div id="contentdbk">
+  <div id="cv">
+    <h2> CV</h2>
+  <h3> CLARA LONGO DE FREITAS </h3>
 
-
-
-    <img src="photo16.jpg" width="650" height="433"><br>
-    <p> My dad and my dog</p>
-    <br>
-    <br>
+  <div id="menu"><a href="claralfreitas@gmail.com">claralfreitas@gmail.com</a></div>
 </div>
+  <br>
+  <br>
 
-
-  </div>
+<div id="sectionheader"> Experiência</div>
 <br>
+<div id="position">Jornalista</div>
+<div id="publication">The Diamondback</div>
+<div id="date"> Novembre 2019 - oggi </div>
+<div id="description"> Escrevo pelo menos duas histórias por semana.</p>
+
 <br>
+<div id="position">Jornalista</div>
+<div id="publication">Howard Center for Investigative Journalism</div>
+<div id="date"> Janeiro 2020 - presente </div>
+<div id="description"> Em meu primeiro semestre, trabalhei em um projeto investigativo de escala nacional que tinha parceria com a NPR e o AP News. Nesse projeto, eu realizei pesquisas sobre leis locais e estaduais e registros judiciais, e conduzi entrevistas. No final, escrevi um artigo investigativo sobre o que encontrei. Também fui selecionada para participar em um segundo projeto de investigação com o centro.</p>
 <br>
+<div id="position">Editora</div>
+<div id="publication">La Voz Unida</div>
+<div id="date"> Novembro 2019 - presente </div>
+<div id="description">Eu edito todo o conteúdo de notícias do jornal.</p>
+<br>
+  <div id="sectionheader">Educação</div>
+  <br>
+  <ul id="degrees">
+  <li> Bacharelado em Jornalismo e Espanhol na University of Maryland. Em andamento. </li>
+  </ul>
+<br>
+<div id="sectionheader"> Competências </div>
+<br>
+<ul>
+  <li> Adobe Photoshop, Adobe inDesign e Adobe Lightroom. </li>
+  <li> Fotojornalismo.</li>
+  <li> HTML e CSS.</li>
+  <li> Falo inglês, espanhol e italiano em nível avançado. </li>
+</ul>
 
-</div>
-  </div>
-</div>
-
-
-
-</div>
+<div id="sectionheader"> Prêmios </div>
+<br>
+<ul>
+  <li> 2019 Academy of Academic Excellence Award  </li>
+  <li> Dean's list</li>
+</ul>
 </body>
 
 <br>
