--- a/Resume-project/resume-project.html
+++ b/Resume-project/resume-project.html
@@ -3,11 +3,12 @@
 <html lang="en">
 <head>
   <!--Google fonts-->
+
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
 
  <title>Clara Longo de Freitas</title>
  <meta name="description" content="Merrill College of Journalism, UMD">
@@ -17,7 +18,6 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 
 </head>
 <body>
@@ -35,16 +35,14 @@
      <li class="nav-item">
        <a class="nav-link" href="#about">About</a>
      </li>
-     <li class="nav-item dropdown">
        <li class="nav-item">
          <a class="nav-link" href="#experience">Experience</a>
        </li>
      <li class="nav-item">
        <a class="nav-link" href="#skills" tabindex="-1" aria-disabled="true">Skills</a>
      </li>
-   <li class="nav-item dropdown">
      <li class="nav-item">
-       <a class="nav-link" href="#contact">Contact</a>
+       <a class="nav-link" href="cv.html" target_"blank">CV</a>
    <!-- keep this just in case
    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
      <a class="dropdown-item" href="dbk.html">The Diamondback</a>
@@ -57,7 +55,7 @@
      <a href="https://twitter.com/claralfreitas" class="fa fa-twitter" target="_blank"></a>
      <a href="https://linkedin.com/in/clara-longo-de-freitas-a01329172" class="fa fa-linkedin" target="_blank"></a>
      <a href="https://github.com/claralfreitas" class="fa fa-github" style="font-size:18px" target_"blank"></a>
-     <a href="mailto:claralfreitas@gmail.com" class="fas fa-envelope" style="font-size:18px"></a>
+     <a href="mailto:claralfreitas@gmail.com" class="fa fa-envelope" style="font-size:18px"target_"blank"></a>
    </form>
  </div>
 </nav>
@@ -73,12 +71,10 @@
     <a href="https://linkedin.com/in/clara-longo-de-freitas-a01329172" class="fa fa-linkedin" target="_blank"></a>
 -->
   </div>
-  <br>
-  <br>
-  <br>
+
   <a id="home">
 
-<img src="banner-resume-project.jpg" alt="banner" width="1443" height="586" class="banner">
+<img src="banner-resume-project.png" alt="banner" width="1443" height="586" class="banner">
 
 <!--unsure if I want this
 <div class="jumbotron">
@@ -209,9 +205,6 @@
         </div>
 </div>
 
-<a id="contact">
-<div id="contact">
-
 
  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -219,6 +212,8 @@
  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 </body>
+<br>
+<br>
 <br>
 <br>
 <br>
