--- a/Resume-project/resume-project.html
+++ b/Resume-project/resume-project.html
@@ -74,7 +74,7 @@
 
   <a id="home">
 
-<img src="banner-resume-project.png" alt="banner" width="1443" height="586" class="banner">
+<img src="banner-resume-project.jpg" alt="banner" width="1443" height="586" class="banner">
 
 <!--unsure if I want this
 <div class="jumbotron">
