--- a/Resume-project/photojournalism.html
+++ b/Resume-project/photojournalism.html
@@ -70,7 +70,7 @@
       <p> Washingtonian at Union Station </p>
       <br>
       <br>
-      <img src="photo8.jpg" width="650" height="488" ><br>
+      <img src="photo8.JPG" width="650" height="488" ><br>
       <p> Flamingos in Atacama</p>
       <br>
       <br>
@@ -78,7 +78,7 @@
       <p> Rainy day</p>
       <br>
       <br>
-      <img src="photo7.jpg" width="650" height="488"><br>
+      <img src="photo7.JPG" width="650" height="488"><br>
       <p> Don Quijote's windmills </p>
       <br>
       <br>
@@ -94,15 +94,15 @@
       <p> Stay gold, Ponyboy</p>
       <br>
       <br>
-      <img src="photo6.jpg" width="650" height="488"><br>
+      <img src="photo6.JPG" width="650" height="488"><br>
       <p> Atacama desert </p>
       <br>
       <br>
-    <img src="photo2.jpg" width="650" height="433"><br>
+    <img src="photo2.JPG" width="650" height="433"><br>
     <p> My dog, Curumim </p>
     <br>
     <br>
-    <img src="photo4.jpg"width="650" height="433"> <br>
+    <img src="photo4.JPG"width="650" height="433"> <br>
     <p> Antelope Canyon </p>
     <br>
     <br>
