--- a/Resume (final version)/italian.html
+++ b/Resume (final version)/italian.html
@@ -5,7 +5,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
- <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
 
  <title>Clara Longo de Freitas</title>
@@ -18,7 +17,9 @@
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<!-- Stylesheet  -->
 
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 
