--- a/Resume (final version)/photojournalism.html
+++ b/Resume (final version)/photojournalism.html
@@ -5,7 +5,6 @@
 
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
- <link rel="stylesheet" type="text/css" href="stylesheet.css">
  <title>Clara Longo de Freitas</title>
  <meta name="description" content="Merrill College of Journalism, UMD">
  <meta name="author" content="Clara Longo de Freitas">
@@ -16,6 +15,9 @@
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<!-- Stylesheet  -->
+
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 
