--- a/Resume (final version)/illustration.html
+++ b/Resume (final version)/illustration.html
@@ -52,8 +52,8 @@
      </div>
    </li>
      <form class="form-inline my-2 my-lg-0">
-       <a href="https://twitter.com/claralfreitas" class="fa fa-twitter" target="_blank"></a>
-       <a href="https://linkedin.com/in/clara-longo-de-freitas-a01329172" class="fa fa-linkedin" target="_blank"></a>
+       <a href="https://twitter.com/claralfreitas" class="fa fa-twitter" style="font-size:18px" target="_blank"></a>
+       <a href="https://linkedin.com/in/clara-longo-de-freitas-a01329172" style="font-size:18px" class="fa fa-linkedin" target="_blank"></a>
        <a href="https://github.com/claralfreitas" class="fa fa-github" style="font-size:18px" target="blank"></a>
        <a href="mailto:claralfreitas@gmail.com" class="fa fa-envelope" style="font-size:18px"target="blank"></a>
      </form>
@@ -63,7 +63,7 @@
     </div>
     <div id="contentdbk">
       <img src="illustration-banner.png" alt="banner" width="600" height="188" class="banner">
-    <p> I'm a creative person - and for me, that means that I have to constantly use my imagination and transforming it into art of some form. Otherwise, I'll go insane.</p>
+    <p> I'm a creative person - and for me, that means that I have to constantly use my imagination and transform it into art of some form. Otherwise, I'll go insane.</p>
     <p> One Friday night where I was especially bored, I tried drawing one of my favorite artists in Photoshop. Here's the result:</p>
     <br>
     <div id="illustrations">
