--- a/Resume (final version)/resume-project.html
+++ b/Resume (final version)/resume-project.html
@@ -53,8 +53,8 @@
    </div>
  </li>
    <form class="form-inline my-2 my-lg-0">
-     <a href="https://twitter.com/claralfreitas" class="fa fa-twitter" target="_blank"></a>
-     <a href="https://linkedin.com/in/clara-longo-de-freitas-a01329172" class="fa fa-linkedin" target="_blank"></a>
+     <a href="https://twitter.com/claralfreitas" class="fa fa-twitter" style="font-size:18px" target="_blank"></a>
+     <a href="https://linkedin.com/in/clara-longo-de-freitas-a01329172" class="fa fa-linkedin" style="font-size:18px" target="_blank"></a>
      <a href="https://github.com/claralfreitas" class="fa fa-github" style="font-size:18px" target_"blank"></a>
      <a href="mailto:claralfreitas@gmail.com" class="fa fa-envelope" style="font-size:18px"target_"blank"></a>
    </form>
