--- a/final project/html-frame.html
+++ b/final project/html-frame.html
@@ -51,7 +51,7 @@
   <div id="grad">
 <a id="home">
 
-  <img src="banner.png" alt="banner" width="1443" class="banner">
+  <img src="banner2 copy.gif" alt="banner" width="1443" class="banner">
   <br>
   <br>
 <br>
@@ -78,12 +78,12 @@
 
 <p> For many fans, "Bangtan Sonyeondan" is especially meaningful at a time where the world is living through systemic racism and a global pandemic. Their discography, their projects, make listeners critically evaluate the education system, Caroline Hirano said. It makes listeners crave for self-love and self-knowledge, using the Carl Jung’s psychological theory as a concept for their album. </p>
 
-<p> “They understand the youth and they give them voice. Their work changes people, it makes them more confident, more empathetic and better people.” Hirano, who is a university student in Brazil, said. “It is exactly what people need from an artist – an artist the vocalizes issues.” </p>
+<p> “They understand the youth and they give them a voice. Their work changes people, it makes them more confident, more empathetic and better people.” Hirano, who is a university student in Brazil, said. “It is exactly what people need from an artist – an artist the vocalizes issues.” </p>
 <p> In early June, Korean pop musical group BTS donated $1 million to Black Lives Matter. Within 24 hours, its fan base – known as ARMY, which stands for “Adorable Representative M.C. for Youth” – matched their donation. </p>
 
 <p> Hirano was one of the ARMYs that donated as part of #MatchAMillion, a trend that sparked on Twitter that called fans to donate to Black Lives Matter.</p>
 
-<p> “I’ve never seen a musical group have so much contact with charity work and political activism as much as BTS and its fans,” Hirano said. </p>
+<p> “I’ve never seen a musical group has so much contact with charity work and political activism as much as BTS and its fans,” Hirano said. </p>
 <br>
 
 <center><img src="bts.jpg" alt="BTS_twt" minwidth="100%" width="800" height="534" class="center">
@@ -120,8 +120,6 @@
 
 <p>The idea of OIAA was created within a weekend, a fan collective comprised of volunteers across the globe, with a core team of 20 fans from 10 different countries. Each month, the organizers choose one non-profit organization and run a fundraiser for its cause. They wanted to focus on smaller organizations with tangible impacts, one that could handle microdonations. </p>
 
-<p>“We wanted to make sure that every ARMY had the opportunity to join the efforts that for sure would make an impact on the community it helped,” The organizers wrote in an email. “The fact that everyone should be able to join is very important to us, because everyone should feel like they are “One” in an ARMY.”</p>
-
 <br>
 
 <iframe title="One In An Army" aria-label="map" id="datawrapper-chart-IvE5a" src="https://datawrapper.dwcdn.net/IvE5a/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="359"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
@@ -134,9 +132,9 @@
 
 <p>“The fact that everyone should be able to join is very important to us, because everyone should feel like they are “One” in an ARMY,” The team said.</p>
 
-<p>When choosing an organization to help, the OIAA try to survey what the fandom is passionate for at the moment, organizing polls to narrow down causes. Usually, their campaign tallies fall under human needs, human rights, health and nature. But they also run fundraisers that are related to BTS and ARMY.</p>
+<p>When choosing an organization to help, the OIAA tries to survey what the fandom is passionate for at the moment, organizing polls to narrow down causes. Usually, their campaign tallies fall under human needs, human rights, health and nature. But they also run fundraisers that are related to BTS and ARMY.</p>
 
-<p>After choosing the cause they will be working with for the month, their research team look for an organization that tend to be small and offer tangible services.</p>
+<p>After choosing the cause they will be working with for the month, their research team look for organizations that tend to be small and offer tangible services.</p>
 
 <p>“We just need to know exactly where ARMY’s money is going to be… as transparent as possible with our campaign material,” The organizers wrote on their website.</p>
 
@@ -151,7 +149,7 @@
 </div>
 </div>
 <br>
-<p>Many campaigns are also “birthday campaigns,” where fans donate to charity as a gift for each member of BTS. During those months, the organization also runs a bonus mission, encouraging fans to do volunteer work and donate for causes of their own choosing. </p>
+<p>Many campaigns are also “birthday campaigns,” where fans donate to charity as gifts for each member of BTS. During those months, the organization also runs a bonus mission, encouraging fans to do volunteer work and donate for causes of their own choosing. </p>
 <div id="center">
 <iframe width="800" height="450" src="https://www.youtube.com/embed/M8QsMVZodno" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <center><div id="caption">In February, One In An Army raised over CA$5,907 for Outside Looking In, an organization that supports indigenous youth in Canada.</div></center>
@@ -172,7 +170,7 @@
 
 <p>Their current campaign, Clowns Without Borders, will help the organization create public service announcements for children who witness or experience family abuse in Ecuador.</p>
 
-<p>The name of the campaign is a perfect fit, the team say. Around the time of BTS pre-comeback, when fans were expecting news of the album to drop, they had a lot of “clown moments,” where they would just be wrong about something.</p>
+<p>The name of the campaign is a perfect fit, the team said. Around the time of BTS pre-comeback, when fans were expecting news of the album to drop, they had a lot of “clown moments,” where they would just be wrong about something.</p>
 
 <p>Although OIAA is a massive force within the fandom, the organizers are just fans, like everyone else, they say. They do it in their spare time.</p>
 
@@ -200,9 +198,13 @@
 <center><div id="caption">For Nicole Santero, the song "WINGS" best represents BTS altruism and inspiration</div></center>
 
 <br>
-<p>Initially, Nicole Santero, a doctorate student at the University of Nevada, Las Vegas, didn’t understand why people would listen to K-Pop if they didn’t understand Korean. Though her boyfriend had been a casual fan of the group since 2013, when they debuted, Santero did not take interest in their music until 2018, when they performed at the Billboard Music Awards. Then, she became intrigued. So, she asked her boyfriend to recommend music videos and songs. </p>
+<p>Initially, Nicole Santero, a doctorate student at the University of Nevada, Las Vegas, didn’t understand why people would listen to K-Pop if they didn’t understand Korean. Though her boyfriend had been a casual fan of the group since 2013, when they debuted, Santero did not take an interest in their music until 2018, when they performed at the Billboard Music Awards. Then, she became intrigued. So, she asked her boyfriend to recommend music videos and songs. </p>
 
 <p> “I fell down the rabbit hole and couldn’t get out of it,” She said with a laugh.
+
+  <center><img src="bts3.jpg" alt="BTS_twt" minwidth="100%" width="800" height="529" class="center">
+  <div id="caption">BTS performing their song "FAKE LOVE" at the Billboard Music Awards.</div></center>
+  <br>
 
 <p>Now, Santero studies the culture, the social organizations and structures of ARMY as part of her doctorate degree. She has her own fan account, where she tries to understand what makes ARMY so impactful. </p>
 
@@ -234,15 +236,18 @@
 
 <p> Almost three years later, Tagseen and Naazeen, who are both 37, run a fanbase account for South Africa, their home country.</p>
 
-<p> Compared to the United States and Europe, there aren’t as many BTS fans there, the sisters said. But they take part on the fandom’s culture of making projects for member’s birthday, like a blood drive in December that about 100 fans attended. They do beach clean-ups and plant trees, and they have organized a project to donate sanitary packs to children who had been sexually abused. All in their hometown, Cape Town. </p>
+<p> Compared to the United States and Europe, there aren’t as many BTS fans there, the sisters said. But they take part in the fandom’s culture of doing projects for members’ birthday, like a blood drive in December that about 100 fans attended. They do beach clean-ups and plant trees, and they have organized a project to donate care packs to children who had been sexually abused. All in their hometown, Cape Town. </p>
 
-<p> Now that COVID-19 has hit the world, they partnered with Ladles of Love, a non-profit organization that feed the underprivileged and the homeless, asking South African-based fans to donate. So far, they have raised $600.</p>
+<p> Now that COVID-19 has hit the world, they partnered with Ladles of Love, a non-profit organization that feeds the underprivileged and the homeless, asking South African-based fans to donate. So far, they have raised over $300.</p>
 
 <p> Before they were fans of BTS, the sisters didn’t go out of their way to do charity, they said. They didn’t plan projects, they didn’t think on how they could make a difference on their own community.</p>
 
 <p> “[But] once you become ARMY, there’s something about seeing other people get involved in charitable things, make a difference, that makes you feel like you also want to make a difference, and almost pay that forward,” Naazeen said. “We've seen our fan base inspire other local fans to also get involved and start doing charitable things on a smaller scale but still trying to make a difference in their own community.” </p>
 
-<p> But now, the sisters are constantly thinking about the next thing. They pay attention on what’s happening in South Africa that requires attention and come up with projects to shed light to the issues. </p>
+<center><img src="bts4.jpeg" alt="BTS_twt" minwidth="100%" width="800" height="600" class="center">
+  <div id="caption">In the page's two-year anniversary, the sisters posted the highlights of their charity work.</div></center>
+
+<p> But now, the sisters are constantly thinking about the next thing. They pay attention to what’s happening in South Africa that requires attention and come up with projects to shed light on the issues. </p>
 
 <p> The fact that BTS members donate to causes close to their heart are particularly inspiring, especially since they don’t usually advertise it, the sisters said. </p>
 
